# federated_test

./: client_app.py  custom_strategy.py  modelos.py  requirements.txt  run_flwr.py  server_app.py  task.py
binario/: README.md  custom_strategy.py  federated_test_colab.ipynb  modelos.py  run_flwr.py  server_app.py
binario/confg/: configuracion.py
colab/: client_app.py  custom_strategy.py  logg.py  pyproject.toml  run_flwr.py  task.py
colab/confg/: configuracion.py
confg/: configuracion.py
multiclase/: client_app.py  custom_strategy.py  modelos.py  pyproject.toml  server_app.py  task.py
multiclase/confg/: configuracion.py
