[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Federated_Learning_Binario"
version = "1.0.0"
description = "Guardado de pesos fruto de realizar un proceso de aprendizaje federado con variable objetivo binaria"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torchvision==0.20.1",
    "wandb==0.17.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"


[tool.flwr.app.config]
backend = "pytorch"
server-device = "cpu"
use-wandb = true

[tool.flwr.federations]
default = "local-sim"

[tool.flwr.federations.local-sim]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # ratio of VRAM a ClientApp has access to

[tool.flwr.federations.local-sim-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.25
